--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Seu Nome | Portfólio</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background: #f2f2f2; color: #333; }
-    header { background: #111; color: white; padding: 2rem; text-align: center; }
+    header { background: #111; color: #fff; padding: 2rem; text-align: center; }
     section { padding: 2rem; max-width: 800px; margin: auto; }
     h2 { color: #111; }
     .portfolio img { width: 100%; max-width: 400px; margin: 1rem 0; border-radius: 8px; }
